infra/loomie/searxng/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loomie-searxng
  namespace: loomie
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "searxng.monederobox.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: loomie-searxng
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: searxng-internal
  namespace: loomie
spec:
  targetRefs:
    - group: "gateway.networking.k8s.io"
      name: loomie-searxng
      kind: HTTPRoute
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 100.64.0.0/10   # Tailscale
            - 192.168.1.0/24  # LAN
